add place create view for first time

--- a/public/locales/tr/common.json
+++ b/public/locales/tr/common.json
@@ -1,5 +1,5 @@
 {
-  "app": "Turistikrota Yönetim Sistemi",
+  "app": "Turistikrota ACP",
   "realName": "Turistikrota",
   "copyright": "Tüm hakları saklıdır."
 }
