feature: complete list view

--- a/public/locales/tr/place-features.json
+++ b/public/locales/tr/place-features.json
@@ -1,6 +1,7 @@
 {
   "list": {
     "title": "Yer Özellikleri",
+    "new": "Yeni Özellik Ekle",
     "table": {
       "title": "Yer Özellikleri",
       "subtitle": "Bu tabloda yer alan özellikler, yerlerin özelliklerini belirtmek için kullanılır."
