complete image uploader for first time

--- a/public/locales/tr/dropzone.json
+++ b/public/locales/tr/dropzone.json
@@ -1,3 +1,4 @@
 {
-  "text": "Dosyaları yüklemek için buraya sürükleyin veya tıklayın."
+  "text": "Dosyaları yüklemek için buraya sürükleyin veya tıklayın.",
+  "remove": "Kaldır"
 }
