feature: add filter query option to place list

--- a/public/locales/tr/places.json
+++ b/public/locales/tr/places.json
@@ -3,6 +3,9 @@
     "title": "Yer Oluştur",
     "check": "Formu göndermek istediğinizden emin misiniz? Bu işlem geri alınamaz."
   },
+  "filter": {
+    "word": "Kelime ara..."
+  },
   "list": {
     "title": "Yerler",
     "card": {
