feature: complete place filter by query operation

--- a/public/locales/tr/places.json
+++ b/public/locales/tr/places.json
@@ -8,6 +8,7 @@
   },
   "list": {
     "title": "Yerler",
+    "total": "Toplam {{total}} yerden {{count}} tane sonuç filtrelendi.",
     "card": {
       "review": "Değerlendirme",
       "latitude": "Enlem",
