feature: add place edit view for first time

--- a/public/locales/tr/places.json
+++ b/public/locales/tr/places.json
@@ -3,6 +3,10 @@
     "title": "Yer Oluştur",
     "check": "Formu göndermek istediğinizden emin misiniz? Bu işlem geri alınamaz."
   },
+  "edit": {
+    "title": "Yer Düzenle",
+    "check": "Formu güncellemek istediğinizden emin misiniz? Bu işlem geri alınamaz."
+  },
   "filter": {
     "word": "Kelime ara..."
   },
