add user list operations

--- a/public/locales/tr/menu.json
+++ b/public/locales/tr/menu.json
@@ -15,5 +15,6 @@
       "list": "Yer Özellikleri"
     }
   },
-  "perms": "Yetkilendirmeler"
+  "perms": "Yetkilendirmeler",
+  "users": "Kullanıcılar"
 }
