--- a/public/locales/tr/menu.json
+++ b/public/locales/tr/menu.json
@@ -15,6 +15,11 @@
       "list": "Yer Özellikleri"
     }
   },
+  "categories": {
+    "main": "Kategoriler",
+    "list": "Kategorileri Listele",
+    "create": "Kategori Oluştur"
+  },
   "perms": "Yetkilendirmeler",
   "users": "Kullanıcılar"
 }
