feature/category: add meta form section translations

--- a/public/locales/tr/categories.json
+++ b/public/locales/tr/categories.json
@@ -7,6 +7,10 @@
   },
   "form": {
     "meta": {
+      "section": {
+        "title": "Kategori Meta Bilgileri",
+        "subtitle": "Bu kategori için meta bilgilerini giriniz."
+      },
       "name": {
         "label": "Ad",
         "placeholder": "Kategori Adı Giriniz"
