feature/category: add markdown section

--- a/public/locales/tr/categories.json
+++ b/public/locales/tr/categories.json
@@ -6,6 +6,7 @@
     "title": "Kategori Oluştur"
   },
   "form": {
+    "submit": "Kategoriyi Kaydet",
     "meta": {
       "section": {
         "title": "Kategori Meta Bilgileri",
