--- a/public/locales/tr/categories.json
+++ b/public/locales/tr/categories.json
@@ -67,6 +67,11 @@
       "title": "Kategori Görselleri",
       "subtitle": "Bu kategori için görselleri giriniz."
     },
+    "detail": {
+        "title": "Kategori Detayları",
+        "subtitle": "Bu kategori için detayları giriniz."
+        
+    },
     "rules": {
       "title": "Kategori Kuralları",
       "subtitle": "Bu kategori için kuralları giriniz. Bu kurallar bu kategoriye bağlı içerikler oluşturulurken gösterilecektir.",
