feature/category: add all translation files

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,1 +1,8 @@
-{}
+{
+  "app": "Turistikrota ACP",
+  "realName": "Turistikrota",
+  "copyright": "All rights reserved.",
+  "menu": {
+    "logout": "Log Out"
+  }
+}
