--- a/public/locales/tr/places.json
+++ b/public/locales/tr/places.json
@@ -90,6 +90,11 @@
           "transport": "Ulaşım",
           "culture": "Kültür",
           "health": "Sağlık",
+          "garden": "Bahçe",
+          "temple": "İbadethane",
+          "museum": "Müze",
+          "antique": "Antik",
+          "themePark": "Eğlence Parkı",
           "sport": "Spor",
           "nature": "Doğa",
           "nightlife": "Gece Hayatı",
