feature/image-upload: fix issue

--- a/public/locales/en/dropzone.json
+++ b/public/locales/en/dropzone.json
@@ -1,4 +1,5 @@
 {
-    "text": "Drag or click here to upload files.",
-    "remove": "Remove"
- }
+  "text": "Drag or click here to upload files.",
+  "remove": "Remove",
+  "copy": "Copy Url"
+}
