--- a/public/locales/tr/menu.json
+++ b/public/locales/tr/menu.json
@@ -21,5 +21,6 @@
     "create": "Kategori Oluştur"
   },
   "perms": "Yetkilendirmeler",
-  "users": "Kullanıcılar"
+  "users": "Kullanıcılar",
+  "upload": "Yükle"
 }
