--- a/public/locales/tr/dropzone.json
+++ b/public/locales/tr/dropzone.json
@@ -1,4 +1,5 @@
 {
   "text": "Dosyaları yüklemek için buraya sürükleyin veya tıklayın.",
-  "remove": "Kaldır"
+  "remove": "Kaldır",
+  "copy": "Kopyala"
 }
